Attempt to fix overflow x mobile

--- a/css/clean-styles.css
+++ b/css/clean-styles.css
@@ -151,6 +151,14 @@ html,
     /*    font-family: 'Montserrat', 'Roboto', sans-serif;*/
 }
 
+html,
+body,
+header,
+main {
+    overflow-x: hidden;
+    width: 100vw;
+}
+
 body {
     vertical-align: baseline;
     margin: 0;
